--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <link href = "./css/reset.css" type = "text/css" rel = "stylesheet"/>
 <link href = "./css/styles.css.css" type = "text/css" rel = "stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat&display=swap" rel="stylesheet">
+
 
 <title> Bus Mall </title>
 </head>
@@ -16,6 +18,22 @@
     <main>
         <section id = "product-display">
 
+        </section>
+
+        <secion id = "text-explain">
+            <p>Lorem Ipsum some stuff about results below</p>
+        </secion>
+
+        <section id = "results">
+            <table>
+                <thead>
+                </thead>
+
+                <tbody>
+
+                </tbody>
+
+            </table>
         </section>
 
     </main>
