--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 <link href = "./css/reset.css" type = "text/css" rel = "stylesheet"/>
-<link href = "./css/styles.css.css" type = "text/css" rel = "stylesheet"/>
+<link href = "./css/styles.css" type = "text/css" rel = "stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat&display=swap" rel="stylesheet">
 
 
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-       <h1>Sample Bus Mall Catalog</h1> 
+    <img src="./img/seattle-bus.png" class = "small"/>
+    <h1>Sample Bus Mall Catalog</h1> 
 
     </header>
 
