--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
+<div class = "container">
     <header>
-    <img src="./img/seattle-bus.png" class = "small"/>
-    <h1>Sample Bus Mall Catalog</h1> 
+    <h1>Welcome to Bus Mall</h1> 
 
     </header>
 
     <main>
         <section id = "product-display">
+
 
         </section>
 
@@ -42,6 +43,5 @@
     <footer>
 
     </footer>
-
 </body>
-
+</div>
