--- a/index.html
+++ b/index.html
@@ -12,18 +12,34 @@
 <body>
 <div class = "container">
     <header>
-    <h1>Welcome to Bus Mall</h1> 
+        <img src ="./images/bus-mall-logo.png" id = "logo">
+        <h1>Welcome to Bus Mall</h1> 
+        <button id = "search-button"> Search <img src = "./images/search-icon.png" class = "icon"></button>
 
     </header>
 
+    <hr>
+
     <main>
-        <section id = "product-display">
-
-
+        <section>
+          <p id = "product-display">  
+            <img src = "./images/pet-sweep.jpg" class = "small">
+            <img src = "./images/pet-sweep.jpg" class = "small">
+            <img src = "./images/pet-sweep.jpg" class = "small">
+        </p>
         </section>
+        
 
-        <secion id = "text-explain">
-            <p>Lorem Ipsum some stuff about results below</p>
+        <secion>
+
+        <p id = "text-explain"> 
+            <button>Choose</button>
+            <button>Choose</button>
+            <button>Choose</button>
+        </p>
+            <h3>As products appear, please select your favorite of the three.  <br>Results will appear header
+                after session is complete.
+            </h3>
         </secion>
 
         <section id = "results">
