--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 <div class = "container">
+    <button id = "search-button"> Search <img src = "./images/search-icon.png" class = "icon"></button>
+    <img src ="./images/bus-mall-logo.png" id = "logo">
     <header>
-        <img src ="./images/bus-mall-logo.png" id = "logo">
-        <h1>Welcome to Bus Mall</h1> 
-        <button id = "search-button"> Search <img src = "./images/search-icon.png" class = "icon"></button>
-
+        <p><h1>Welcome to Bus Mall</h1> </p>
+        
     </header>
-
+    
     <hr>
 
     <main>
@@ -37,8 +37,8 @@
             <button>Choose</button>
             <button>Choose</button>
         </p>
-            <h3>As products appear, please select your favorite of the three.  <br>Results will appear header
-                after session is complete.
+            <h3>As products appear, please select your favorite of the three.  <br>Results will appear here
+                after your session is complete.
             </h3>
         </secion>
 
