--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
         </section>
         
 
-        <secion>
+        <section id = "text-explain">
 
-        <p id = "text-explain"> 
+        <p > 
             <button>Choose</button>
             <button>Choose</button>
             <button>Choose</button>
         </p>
-            <h3>As products appear, please select your favorite of the three.  <br>Results will appear here
+            <h3>As products appear, please select your favorite of the three.  <br>Results will appear below
                 after your session is complete.
             </h3>
-        </secion>
+            <hr>
+        </section>
+
 
         <section id = "results">
             <table>
