--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <link href = "./css/reset.css" type = "text/css" rel = "stylesheet"/>
 <link href = "./css/styles.css" type = "text/css" rel = "stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://use.typekit.net/aer4iaz.css">
 
 <title> Bus Mall </title>
 </head>
 
 <body>
 <div class = "container">
-    <button id = "search-button"> Search <img src = "./images/search-icon.png" class = "icon"></button>
-    <img src ="./images/bus-mall-logo.png" id = "logo">
+    <button id = "search-button"> Search <img src = "./assets/search-icon.png" class = "icon"></button>
+    <img src ="./assets/bus-mall-logo.png" id = "logo">
     <header>
         <p><h1>Welcome to Bus Mall</h1> </p>
         
@@ -23,9 +23,9 @@
     <main>
         <section>
           <p id = "product-display">  
-            <img src = "./images/pet-sweep.jpg" class = "small">
-            <img src = "./images/pet-sweep.jpg" class = "small">
-            <img src = "./images/pet-sweep.jpg" class = "small">
+            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-one">
+            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-two">
+            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-three">
         </p>
         </section>
         
