--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
     <main>
         <section>
-          <p id = "product-display">  
-            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-one">
-            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-two">
-            <img src = "./images/pet-sweep.jpg" class = "small" id = "product-pic-three">
-        </p>
-        </section>
+            <p id = "product-display">  
+                <img src = "./images/dragon-meat.jpg" class = "small" id = "product-pic-one">
+                <img src = "./images/dragon-meat.jpg " class = "small" id = "product-pic-two">
+                <img src = "./images/dragon-meat.jpg" class = "small" id = "product-pic-three">
+            </p>
+<!--             <p id = "click-boxes">
+                <button>Choose</button>
+                <button>Choose</button>
+                <button>Choose</button>
+            </p>
+ -->        </section>
         
 
         <section id = "text-explain">
 
-        <p > 
-            <button>Choose</button>
-            <button>Choose</button>
-            <button>Choose</button>
-        </p>
             <h3>As products appear, please select your favorite of the three.  <br>Results will appear below
                 after your session is complete.
             </h3>
@@ -59,7 +59,13 @@
     </main>
 
     <footer>
-
+        <hr>
+        <hr>
+        <p>
+            &copy @kimmyd70,  2020
+        </p>
+        <hr>
+        <hr>
     </footer>
 </body>
 </div>
