fix clickCount, round max, and display table

--- a/index.html
+++ b/index.html
@@ -23,22 +23,17 @@
     <main>
         <section>
             <p id = "product-display">  
-                <img src = "./images/dragon-meat.jpg" class = "small" id = "product-pic-one">
-                <img src = "./images/dragon-meat.jpg " class = "small" id = "product-pic-two">
-                <img src = "./images/dragon-meat.jpg" class = "small" id = "product-pic-three">
+                <img src = " " class = "small" id = "product-pic-one">
+                <img src = " " class = "small" id = "product-pic-two">
+                <img src = " " class = "grow small" id = "product-pic-three">
             </p>
-<!--             <p id = "click-boxes">
-                <button>Choose</button>
-                <button>Choose</button>
-                <button>Choose</button>
-            </p>
- -->        </section>
+       </section>
         
 
         <section id = "text-explain">
 
             <h3>As products appear, please select your favorite of the three.  <br>Results will appear below
-                after your session is complete.
+                after your session is complete. <br><h4>Please click on any to start</h4>
             </h3>
             <hr>
         </section>
@@ -57,6 +52,8 @@
         </section>
 
     </main>
+
+    <script src="./app.js"></script>
 
     <footer>
         <hr>
