table and round counter need fixed

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main>
         <section>
             <p id = "product-display">  
-                <img src = " " class = "small" id = "product-pic-one">
-                <img src = " " class = "small" id = "product-pic-two">
-                <img src = " " class = "grow small" id = "product-pic-three">
+                <img src = " "  alt = " " title = " " class = "small" id = "product-pic-one">
+                <img src = " " alt = " " title = " " class = "small" id = "product-pic-two">
+                <img src = " " alt = " " title = " " class = "small" id = "product-pic-three">
+                
             </p>
-       </section>
-        
+        </section>
 
         <section id = "text-explain">
 
