added check for same products in sequential rounds

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </section>
 
 
-        <section id = "results">
+        <!-- <section id = "results"> -->
+
+        <section id = "chart">
+            <canvas> </canvas>
         </section>
 
     </main>
