include local storaage

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <hr>
 
     <main>
+        <section id = "refresh">
+            <button id = "refresh-button"><a HREF="javascript:history.go(0)">New <br>Session</a></button>
+        </section>
+
         <section>
             <p id = "product-display">  
                 <img src = " "  alt = " " title = " " class = "small" id = "product-pic-one">
